--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,1 +1,31 @@
-<p>formulario works!</p>
+<form #nuevoPost="ngForm" (ngSubmit)="onSubmit(nuevoPost.value)">
+
+    <div>
+        <label>Título</label>
+        <input type="text" name="titulo" ngModel>
+    </div>
+    <div>
+        <label>Post</label>
+        <input type="text" name="texto" ngModel>
+    </div>
+    <div>
+        <label>Autor</label>
+        <input type="text" name="autor" ngModel>
+    </div>
+    <div>
+        <label>Imagen</label>
+        <input type="text" name="imagen" ngModel>
+    </div>
+    <div>
+        <label>Fecha</label>
+        <input type="text" name="fecha" ngModel>
+    </div>
+    <div>
+        <label>Categoria</label>
+        <input type="text" name="categoria" ngModel>
+    </div>
+
+    <input type="submit" value="Enviar Nuevo POST">
+</form>
+
+{{nuevoPost.value |json}}
