--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="contenedor">
   <nav>
-    <div><img src="" alt="">LOGO</div>
+    <div><img src="">LOGO</div>
     <a [routerLink]="['/blog']">BLOG</a>
     <a [routerLink]="['/new']">NUEVO POST</a>
-    <a href="https://www.pecestropicales.club" target="_blank" alt="Esta es mi página WEB">WEB</a>
+    <a href="https://www.pecestropicales.club" target="_blank">WEB</a>
   </nav>
-
+  <h2>HOLA QUE TAL</h2>
+  <h3>OLA K ASE</h3>
   <div><img src="" alt="">AQUI VA LA IMAGEN DE Peces Tropicales.club</div>
   <router-outlet> </router-outlet>
 
