--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Handlee&display=swap');
+
+:root {
+    --fuenteprincipal:  'Handlee', cursive;
+    --fuentesecundaria: 'Baloo Tamma 2', cursive;
+}
