Estilos app component finalizados.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
 <div class="contenedor">
+
   <nav>
-    <div><img src="">LOGO</div>
-    <a [routerLink]="['/blog']">BLOG</a>
-    <a [routerLink]="['/new']">NUEVO POST</a>
-    <a href="https://www.pecestropicales.club" target="_blank">WEB</a>
+    <div>
+      <img id="logo" src="../assets/Pecestropicales.png">
+    </div>
+    <div>
+      <a [routerLink]="['/blog']">BLOG</a>
+      <a [routerLink]="['/new']">NUEVO POST</a>
+      <a href="https://www.pecestropicales.club" target="_blank">MI WEB</a>
+    </div>
   </nav>
-  <h2>HOLA QUE TAL</h2>
-  <h3>OLA K ASE</h3>
-  <div><img src="" alt="">AQUI VA LA IMAGEN DE Peces Tropicales.club</div>
+
+  <div>
+    <img id="cabecera" src="../assets/PecesTropicalesclub1.png">
+  </div>
   <router-outlet> </router-outlet>
 
 
