--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Handlee&display=swap');
-
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
-img {
+#logo {
     display: block;
-    width: 100px;
+    width: 75px;
     height: auto;
 }
 
+div nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    background: linear-gradient(to right, white, lightblue);
+    width: 100%;
+    margin-top: 0px;
+}
+
+div nav div:last-child a {
+    color: black;
+    text-decoration: none;
+    padding-right: 50px;
+    font-family: var(--fuenteprincipal);
+    font-weight: bold;
+    ;
+}
+div nav div:last-child a:hover {
+    text-shadow: 2px 2px 2px rgb(105, 105, 233);
+}
+
+#cabecera {
+    width: 100vw;
+   
+}
