--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Handlee&display=swap');
 
+
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
 :root {
     --fuenteprincipal:  'Handlee', cursive;
     --fuentesecundaria: 'Baloo Tamma 2', cursive;
-}
+} 
