Estilo blog finalizado, a falta de detalles.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor">
+<div>
 
   <nav>
     <div>
@@ -16,5 +16,8 @@
   </div>
   <router-outlet> </router-outlet>
 
+  <div id="footer">
+    <p>PecesTropicales.club 2020</p>
+  </div>
 
 </div>
