--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,14 +16,14 @@ div nav {
     align-items: center;
     position: fixed;
     background: linear-gradient(to right, white, lightblue);
-    width: 100%;
+    width: 100%; 
     margin-top: 0px;
 }
 
 div nav div:last-child a {
     color: black;
     text-decoration: none;
-    padding-right: 50px;
+    padding: 20px;
     font-family: var(--fuenteprincipal);
     font-weight: bold;
     ;
@@ -33,6 +33,17 @@ div nav div:last-child a:hover {
 }
 
 #cabecera {
-    width: 100vw;
+    width: 100%;
    
+}
+
+#footer {
+    height: 25px;
+    background-color: whitesmoke;
+}
+
+#footer p {
+    text-align: center;
+    margin-top: 25px;
+    font-family: var(--fuentesecundaria);
 }
