--- a/src/app/componentes/formulario/formulario.component.css
+++ b/src/app/componentes/formulario/formulario.component.css
@@ -75,3 +75,19 @@ textarea {
 #guardado h2 {
     font-size: 20px;
 }
+
+.error {
+    font-family: var(--fuenteprincipal);
+    text-align: center;
+    
+}
+
+input.ng-invalid.ng-touched {
+    border: 1px solid tomato;
+    box-shadow: 5px 1px 5px 0px tomato;
+}
+
+textarea.ng-invalid.ng-touched {
+    border: 1px solid tomato;
+    box-shadow: 5px 1px 5px 0px tomato;
+}
