--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </nav>
 
   <div>
-    <img id="cabecera" src="../assets/PecesTropicalesclub1.png">
+    <img id="cabecera" src="../assets/cropped-PecesTropicales.club-2-2048x572.png">
   </div>
   <router-outlet> </router-outlet>
 
